Update pom and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ groups=""
 url=""
 browser=""
 seleniumTestEmailList=""
+
+quarkus.openshift.build-strategy=docker
+quarkus.kubernetes-client.trust-certs=true
+quarkus.openshift.route.expose=true
