--- a/src/main/docker/Dockerfile.jvm.staged
+++ b/src/main/docker/Dockerfile.jvm.staged
@@ -47,6 +47,10 @@ COPY --from=0 --chown=1001 /build/target/quarkus-app/lib/ /deployments/lib/
 COPY --from=0 --chown=1001 /build/target/quarkus-app/*.jar /deployments/export-run-artifact.jar
 COPY --from=0 --chown=1001 /build/target/quarkus-app/app/ /deployments/app/
 COPY --from=0 --chown=1001 /build/target/quarkus-app/quarkus/ /deployments/quarkus/
+
+#Specify the user with UID
+USER 1001
+
 EXPOSE 8080
 ENTRYPOINT ["/opt/jboss/container/java/run/run-java.sh"]
 
