--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
     <quarkus.platform.version>3.5.0</quarkus.platform.version>
     <surefire-plugin.version>3.1.2</surefire-plugin.version>
+    <quarkus-amazon-services.version>2.5.2</quarkus-amazon-services.version>
+    <awssdk.testcontainers.version>1.12.57</awssdk.testcontainers.version>
   </properties>
   <dependencyManagement>
     <dependencies>
