--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,18 @@
   <artifactId>cron-job-creator</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <properties>
+    <awssdk.testcontainers.version>1.12.57</awssdk.testcontainers.version>
     <compiler-plugin.version>3.11.0</compiler-plugin.version>
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <quarkus-amazon-services.version>2.5.2</quarkus-amazon-services.version>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
     <quarkus.platform.version>3.5.0</quarkus.platform.version>
     <surefire-plugin.version>3.1.2</surefire-plugin.version>
-    <quarkus-amazon-services.version>2.5.2</quarkus-amazon-services.version>
-    <awssdk.testcontainers.version>1.12.57</awssdk.testcontainers.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -42,6 +42,18 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-openshift</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-kubernetes-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-openshift-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-reactive-qute</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
