--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
       <artifactId>commons-io</artifactId>
       <version>2.15.0</version>
     </dependency>
+    <dependency>
+      <groupId>net.redhogs.cronparser</groupId>
+      <artifactId>cron-parser-core</artifactId>
+      <version>3.5</version>
+  </dependency>
   </dependencies>
   <build>
     <plugins>
