--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,11 @@
       <groupId>net.redhogs.cronparser</groupId>
       <artifactId>cron-parser-core</artifactId>
       <version>3.5</version>
-  </dependency>
+    </dependency>
+    <dependency>
+      <groupId>io.fabric8</groupId>
+      <artifactId>tekton-client</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
