--- a/src/main/resources/cronjob-selenium-master.yml
+++ b/src/main/resources/cronjob-selenium-master.yml
@@ -12,7 +12,7 @@ spec:
           containers:
           - name: selenium-CLEAN_GROUPS-URL-CLEAN_RELEASE_BRANCH-cj-trigger
             image: {{ .Values.baseImageRegistry }}/ffe-curl:0.0.1
-            args: ["curl", "-X", "POST", "--data", "{}", "el-{{ .Values.cluster }}-selenium-CLEAN_GROUPS-URL-CLEAN_RELEASE_BRANCH-cronjob.tester-pipelines.svc.cluster.local:8080"]
+            args: ["curl", "-X", "POST", "--data", "{}", "el-CLEAN_GROUPS-URL-CLEAN_RELEASE_BRANCH-cronjob.tester-pipelines.svc.cluster.local:8080"]
             envFrom:
               - configMapRef:
                   name: cms-ffm-selnium-cronjob-env-ops
