--- a/src/main/resources/trigger-template-master.yml
+++ b/src/main/resources/trigger-template-master.yml
@@ -1,7 +1,7 @@
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerTemplate
 metadata:
-  name: selenium-CLEAN_GROUPS-URL-CLEAN_RELEASE_BRANCH-cronjob-tt
+  name: CLEAN_GROUPS-URL-CLEAN_RELEASE_BRANCH-cronjob-tt
   namespace: tester-pipelines
 spec:
   params:
@@ -23,7 +23,7 @@ spec:
     - apiVersion: tekton.dev/v1beta1
       kind: PipelineRun
       metadata:
-        generateName: {{ .Values.cluster }}-selenium-CLEAN_GROUPS-URL-CLEAN_RELEASE_BRANCH-confjob-tt-
+        generateName: CLEAN_GROUPS-URL-CLEAN_RELEASE_BRANCH-confjob-tt-
       spec:
         params:
           - name: releaseBranch
