--- a/src/main/resources/trigger-binding-gatling-master.yml
+++ b/src/main/resources/trigger-binding-gatling-master.yml
@@ -1,7 +1,7 @@
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
-  name: gatling-URL-CLEAN_RELEASE_BRANCH-cj-binding
+  name: gatling-TYPE-URL-CLEAN_RELEASE_BRANCH-cj-binding
   namespace: tester-pipelines
 spec:
   params:
@@ -9,5 +9,7 @@ spec:
       value: RELEASEBRANCH
     - name: url
       value: URL
+    - name: type
+      value: TYPE
     - name: gatlingTestEmailList
       value: GATLINGTESTEMAILLIST
