Added in outline for Dashboard page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 quarkus.openshift.build-strategy=docker
 quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.route.expose=true
+upload.directory= /tmp/download
