--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
       <artifactId>cron-utils</artifactId>
       <version>9.2.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
+    <dependency>
+      <groupId>org.eclipse.jgit</groupId>
+      <artifactId>org.eclipse.jgit</artifactId>
+      <version>6.9.0.202403050737-r</version>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
