Changed host url to ENV Var

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ quarkus.openshift.build-strategy=docker
 quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.route.expose=true
 upload.directory= /tmp/download
-# current.host = ${OC_HOST_URL}
+current.host = ${OC_HOST_URL}
