Added in default

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 quarkus.openshift.build-strategy=docker
 quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.route.expose=true
-upload.directory= /tmp/download
-current.host= ${OC_HOST_URL}
+upload.directory=/tmp/download
+current.host=${OC_HOST_URL:"localhost:8080"}
