--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ quarkus.openshift.build-strategy=docker
 quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.route.expose=true
 upload.directory=/tmp/download
-current.host=${OC_HOST_URL:"localhost:8080"}
+current.host=${OC_CONSOLE_URL:localhost:8080}
 # quarkus.openshift.env.vars.oc.host.url=${cronjob-creator-cm:oc-host-url}
