--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
       <artifactId>org.eclipse.jgit</artifactId>
       <version>6.9.0.202403050737-r</version>
     </dependency>
+    <dependency>
+      <groupId>com.cronutils</groupId>
+      <artifactId>cron-utils</artifactId>
+      <version>9.2.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
