--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
       <artifactId>cron-utils</artifactId>
       <version>9.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.22</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
