Removed route vector and fixed url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 quarkus.openshift.build-strategy=docker
 quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.route.expose=true
-quarkus.openshift.pvc-volumes.pipeline-storage.claim-name=selenium-pipeline-results-pvc
 quarkus.openshift.mounts.pipeline-storage.path=/testing/selenium/pipeline-reports
+quarkus.openshift.pvc-volumes.pipeline-storage.claim-name=selenium-pipeline-results-pvc
+quarkus.http.static-resources.paths=/testing/selenium/pipeline-reports
