--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
     <dependency>
       <groupId>com.cronutils</groupId>
       <artifactId>cron-utils</artifactId>
-      <version>9.2.0</version>
+      <version>9.2.0.redhat-00001</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
