Added framework to start pipelines through the Web UI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.route.expose=true
 quarkus.openshift.mounts.pipeline-storage.path=/testing/selenium/pipeline-reports
 quarkus.openshift.pvc-volumes.pipeline-storage.claim-name=selenium-pipeline-results-stroage-pvc
+ffe.selenium.pipeline.name=test-selenium-grid-test-pipeline
 # quarkus.http.static-resources.paths=/testing/selenium/pipeline-reports
