Updated mistakes in list reports

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 quarkus.openshift.build-strategy=docker
 quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.route.expose=true
-quarkus.openshift.mounts.pipeline-storage.path=${SELENIUM_PVC_PATH}
-quarkus.openshift.pvc-volumes.pipeline-storage.claim-name=${SELENIUM_PVC_CLAIM_NAME}
-ffe.selenium.pipeline.name=${SELENIUM_PIPELINE_NAME}
+quarkus.openshift.mounts.pipeline-storage.path=/testing/selenium/pipeline-reports
+quarkus.openshift.pvc-volumes.pipeline-storage.claim-name=selenium-pipeline-results-storage-pvc
+ffe.selenium.pipeline.name=devops-selenium-grid-test-pipeline
