Fixed code to not use depericated methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.route.expose=true
 quarkus.openshift.mounts.pipeline-storage.path=/testing/selenium/pipeline-reports
 quarkus.openshift.pvc-volumes.pipeline-storage.claim-name=selenium-pipeline-results-storage-pvc
-# This need to match the naem of the pipeline
+# This needs to match the name of the pipeline. Make sure there are not trailing spaces
 ffe.selenium.pipeline.name=devops-selenium-grid-test-pipeline
