Added cronjobs will not be run in EST time zone

--- a/src/main/resources/cronjob-selenium-master.yml
+++ b/src/main/resources/cronjob-selenium-master.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: tester-pipelines
 spec:
   schedule: "SCHEDULE" # HUMAN_READALBE 
-  # timeZone: EST5EDT
+  timeZone: EST5EDT
   jobTemplate:
     spec:
       template:
