Added days to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ quarkus.openshift.route.expose=true
 quarkus.openshift.mounts.pipeline-storage.path=/testing/selenium/pipeline-reports
 quarkus.openshift.pvc-volumes.pipeline-storage.claim-name=selenium-pipeline-results-storage-pvc
 # This needs to match the name of the pipeline. Make sure there are not trailing spaces
-ffe.selenium.pipeline.name=test-selenium-grid-test-pipeline
+selenium.pipeline.name=test-selenium-grid-test-pipeline
+selenium.age.threshold.days=7
