Add in page to submit/edit tags

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ quarkus.openshift.pvc-volumes.pipeline-storage.claim-name=selenium-pipeline-resu
 # This needs to match the name of the pipeline. Make sure there are not trailing spaces
 selenium.pipeline.name=test-selenium-grid-test-pipeline
 selenium.age.threshold.days=7
+selenium.tags.file.name=seleniumTags.properties
+quarkus.live-reload.instrumentation=true
