Using logger instead of system.out

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ selenium.pipeline.name=test-selenium-grid-test-pipeline
 selenium.age.threshold.days=14
 selenium.tags.file.name=seleniumTags.properties
 quarkus.live-reload.instrumentation=true
+# For logging
+quarkus.log.console.enable=true
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
