Logs in ETC and Fixed displaying name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ selenium.tags.file.name=seleniumTags.properties
 quarkus.live-reload.instrumentation=true
 # For logging
 quarkus.log.console.enable=true
-quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,America/New_York} %-5p [%c{2.}] (%t) %s%e%n
