--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.openshift.build-strategy=docker
 quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.mounts.pipeline-storage.path=/testing/selenium/pipeline-reports
-quarkus.openshift.pvc-volumes.pipeline-storage.claim-name=selenium-pipeline-results-storage-pvc
+# quarkus.openshift.pvc-volumes.pipeline-storage.claim-name=selenium-pipeline-results-storage-pvc
 # This needs to match the name of the pipeline. Make sure there are not trailing spaces
 selenium.pipeline.name=test-selenium-grid-test-pipeline
 selenium.age.threshold.days=14
