--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
       <version>1.18.22</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.3.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
