--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
       <artifactId>quartz</artifactId>
       <version>2.3.2</version>
     </dependency>
+    <!-- Apache POI for reading Excel files -->
+    <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>5.2.3</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
