Added comments and move file to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,11 @@ quarkus.openshift.mounts.pipeline-storage.path=/testing/selenium/pipeline-report
 # This needs to match the name of the pipeline. Make sure there are not trailing spaces
 selenium.pipeline.name=test-selenium-grid-test-pipeline
 selenium.age.threshold.days=14
-selenium.tags.file.name=seleniumTags.properties
 quarkus.live-reload.instrumentation=true
+# Name of the example Excel file
+selenium.excel.example.file=massCreateFormatExample.xlsx
+# Name of the Selenium Tags file
+selenium.tags.file.name=seleniumTags.properties
 # For logging
 quarkus.log.console.enable=true
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss} %-5p [%c{2.}] %s%e%n
