Made the Mass Update use a excel file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ selenium.pipeline.name=test-selenium-grid-test-pipeline
 selenium.age.threshold.days=14
 quarkus.live-reload.instrumentation=true
 # Name of the example Excel file
-selenium.excel.example.file=massCreateFormatExample.xlsx
+selenium.mass.create.excel.example.file=massCreateFormatExample.xlsx
+selenium.mass.update.excel.example.file=massUpdateScheduleFormatExample.xls
 # Name of the Selenium Tags file
 selenium.tags.file.name=seleniumTags.properties
 # For logging
